--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     
     <title>Hiva Shaloudegi HTML CSS Template</title>
 <!--
-Catalyst Template
-http://www.templatemo.com/tm-499-catalyst
+Hiva Shaloudegi Template
+http://www.templatemo.com/tm-499-Hiva Shaloudegi
 -->
 </head>
 
@@ -22,7 +22,7 @@ http://www.templatemo.com/tm-499-catalyst
         <section class="col-md-12 content" id="home">
            <div class="col-lg-6 col-md-6 content-item tm-black-translucent-bg tm-logo-box">
               <i class="fa fa-snowflake-o fa-4x tm-logo"></i>
-              <h1 class="text-uppercase">Catalyst</h1>
+              <h1 class="text-uppercase">Hiva Shaloudegi</h1>
                
            </div>
            <div class="col-lg-6 col-md-6 content-item content-item-1 background tm-white-translucent-bg">
